# zadarma-odoo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  __manifest__.py  hooks.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
controllers/: webhook.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  RUNBOOK.md  TZ.md
migrations/1.3.0/: post-migrate.py
models/: __init__.py  partner_lead_ext.py  res_company.py  res_partner.py  res_users.py  zadarma_call.py  zadarma_dashboard.py  zadarma_import.py
security/: ir.model.access.csv  zadarma_security.xml
static/description/: index.html
views/: partner_lead_views.xml  res_company_views.xml  res_partner_views.xml  res_users_views.xml  sms_stats_views.xml  zadarma_dashboard_views.xml  zadarma_import_views.xml  zadarma_views.xml
